add static object

--- a/Cuphead.vcxproj
+++ b/Cuphead.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="Objects\Marker.cpp" />
     <ClCompile Include="Objects\Object.cpp" />
     <ClCompile Include="Objects\Player.cpp" />
+    <ClCompile Include="Objects\StaticObject.cpp" />
     <ClCompile Include="PlayerState\AimState.cpp" />
     <ClCompile Include="PlayerState\DashState.cpp" />
     <ClCompile Include="PlayerState\DuckState.cpp" />
@@ -78,6 +79,7 @@
     <ClInclude Include="Objects\Marker.h" />
     <ClInclude Include="Objects\Object.h" />
     <ClInclude Include="Objects\Player.h" />
+    <ClInclude Include="Objects\StaticObject.h" />
     <ClInclude Include="PlayerState\AimState.h" />
     <ClInclude Include="PlayerState\DashState.h" />
     <ClInclude Include="PlayerState\DuckState.h" />
